# crakoon

./: .gitignore  .travis.yml  Doxyfile.in  HACKING.rst  Makefile.am  README.rst  SYMBOLS  arakoon-1.0.pc.in  arakoonmm-1.0.pc.in  autogen.sh  checksymbols.sh  configure.ac
jenkins/base/: 010_install_dependencies.sh  020_build.sh  030_run_tests.sh  040_distcheck.sh
m4/: stdbool.m4
src/: Makefile.am  arakoon-assert.c  arakoon-assert.h  arakoon-client-call-options.c  arakoon-client-call-options.h  arakoon-cluster-node.c  arakoon-cluster-node.h  arakoon-cluster.c  arakoon-cluster.h  arakoon-key-value-list.c  arakoon-key-value-list.h  arakoon-library-version.c  arakoon-networking.c  arakoon-networking.h  arakoon-nursery-routing.c  arakoon-nursery-routing.h  arakoon-nursery.c  arakoon-nursery.h  arakoon-protocol.h  arakoon-utils.c  arakoon-utils.h  arakoon-value-list.c  arakoon-value-list.h  arakoon.c  arakoon.cpp  arakoon.h  arakoon.hpp  arakoonmm.cpp  arakoonmm.hpp
tests/: Makefile.am  check-arakoon.c  check-tests.py  check_arakoon.c  check_arakoon_client.c  check_memory.c  memory.c  memory.h  test-arakoon-client.c  test-nursery-client  test-nursery-client.c  test_arakoon_client.c  utils.h
